[gd_scene load_steps=6 format=3 uid="uid://q3o6m3u5hq5o"]

[ext_resource type="PackedScene" uid="uid://bgwly6pw4ffjm" path="res://characters/hololive/ina/Takodachi.tscn" id="1_aryvn"]
[ext_resource type="Script" uid="uid://b6q1htns51xh7" path="res://scenes/CharacterSelector.gd" id="1_xr0xo"]
[ext_resource type="PackedScene" uid="uid://btk5ue5k11f22" path="res://characters/indie/dokibird/RegularDragoon.tscn" id="2_umppr"]
[ext_resource type="PackedScene" uid="uid://chpv30mp28r50" path="res://characters/indie/henya/rubixcube.tscn" id="4_umppr"]
[ext_resource type="PackedScene" uid="uid://7yt7e447rxyw" path="res://characters/indie/saba/Kaniki.tscn" id="5_wvoht"]

[node name="SelectorMenu" type="CanvasLayer"]
script = ExtResource("1_xr0xo")
selectable_characters = Array[PackedScene]([ExtResource("2_umppr"), ExtResource("1_aryvn"), ExtResource("4_umppr"), ExtResource("5_wvoht")])

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.5
offset_top = -149.0
offset_right = 336.5
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 553.0
offset_top = 256.0
offset_right = 649.0
offset_bottom = 287.0
text = "Start Game"

[node name="CharacterSelection" type="HBoxContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -1.0
offset_top = 5.0
offset_right = 545.0
offset_bottom = 42.0

[node name="SelectedCharacters" type="VBoxContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 570.0
offset_top = 7.0
offset_right = 610.0
offset_bottom = 246.0

[connection signal="pressed" from="Control/Button" to="." method="start_game"]
